--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>foo</groupId>
     <version>1.0-SNAPSHOT</version>
-    <name>helloheroku</name>
-    <artifactId>helloheroku</artifactId>
+    <name>WebSolr-java</name>
+    <artifactId>websolrjava</artifactId>
     <packaging>jar</packaging>
 
     <properties>
@@ -13,6 +13,16 @@
     </properties>
 
     <dependencies>
+		<dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.5.6</version>
+        </dependency>  
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.4.2</version>
+		</dependency>
 
         <!-- Jetty -->
         <dependency>
@@ -24,6 +34,13 @@
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jsp-2.1-glassfish</artifactId>
             <version>2.1.v20100127</version>
+        </dependency>
+		<dependency>
+               <artifactId>solr-core</artifactId>
+               <groupId>org.apache.solr</groupId>
+               <version>1.4.0</version>
+               <type>jar</type>
+               <scope>compile</scope>
         </dependency>
 
     </dependencies>
