--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,5 +8,13 @@
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+	<servlet>
+		<servlet-name>SolrProxy</servlet-name>
+		<servlet-class>foo.SolrProxy</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SolrProxy</servlet-name>
+		<url-pattern>*.solr</url-pattern>
+	</servlet-mapping>
 
 </web-app>
