--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
             <artifactId>jsp-2.1-glassfish</artifactId>
             <version>2.1.v20100127</version>
         </dependency>
+        <!-- Solr -->  
 		<dependency>
                <artifactId>solr-core</artifactId>
                <groupId>org.apache.solr</groupId>
@@ -42,6 +43,12 @@
                <type>jar</type>
                <scope>compile</scope>
         </dependency>
+        <!--  Force.com Oauth Servlet Filter -->
+		<dependency>
+		    <groupId>com.force.sdk</groupId>
+		    <artifactId>force-oauth</artifactId>
+		    <version>22.0.7-BETA</version>
+		</dependency>
 
     </dependencies>
 
