--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                     <assembleDirectory>target</assembleDirectory> 
                     <programs>
                         <program>
-                            <mainClass>foo.Main</mainClass>
+                            <mainClass>com.heroku.examples.websolr.Main</mainClass>
                             <name>webapp</name>
                         </program>
                     </programs>
