--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>WebSolr-java</name>
     <artifactId>websolrjava</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.6</java.version>
