--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,19 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-
-            <!-- The maven app assembler plugin will generate a script that sets up the classpath and runs your project -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <webappDirectory>${project.build.directory}/${project.artifactId}</webappDirectory>
+                    <warName>${project.artifactId}</warName>
+                </configuration>
+            </plugin>
+            <!-- The maven app assembler plugin will generate a script that sets up the classpath and runs your project -->
+            <!--
+	    <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.1.1</version>
@@ -80,6 +90,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 </project>
